# AetherLink

./: .gitignore  Cargo.toml  README.md
apps/aetherlink-daemon/: Cargo.toml
apps/aetherlink-daemon/src/: main.rs
apps/aetherlink-daemonctl/: Cargo.toml
apps/aetherlink-daemonctl/src/: main.rs
apps/aetherlink-flutter/: README.md  pubspec.yaml
apps/aetherlink-flutter/lib/: main.dart
apps/aetherlink-node/: Cargo.toml
apps/aetherlink-node/src/: main.rs
crates/aetherlink-core/: Cargo.toml
crates/aetherlink-core/src/: lib.rs  security.rs
crates/aetherlink-input/: Cargo.toml
crates/aetherlink-input/src/: lib.rs
crates/aetherlink-media/: Cargo.toml
crates/aetherlink-media/src/: lib.rs
crates/aetherlink-network/: Cargo.toml
crates/aetherlink-network/src/: lib.rs
crates/aetherlink-proto/: Cargo.toml  build.rs
crates/aetherlink-proto/src/: lib.rs
docs/spec/: v1-connection-protocol.md  v1-daemon-ipc.md  v1-frb-api.md
proto/aetherlink/v1/: control.proto  ipc.proto
scripts/: demo_daemon_roundtrip.sh  demo_device_code_discovery.sh  demo_two_nodes.sh  media_poc_x11_h264_udp.sh
