[workspace]
members = [
  "crates/aetherlink-proto",
  "crates/aetherlink-core",
  "apps/aetherlink-node",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.3.0"

[workspace.dependencies]
anyhow = "1.0.100"
aetherlink-core = { path = "crates/aetherlink-core" }
aetherlink-proto = { path = "crates/aetherlink-proto" }
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
libp2p = { version = "0.56.0", features = [
  "tokio",
  "macros",
  "cbor",
  "noise",
  "ping",
  "identify",
  "kad",
  "mdns",
  "quic",
  "request-response",
  "relay",
] }
prost = "0.14.1"
prost-build = "0.14.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
