[package]
name = "aetherlink-daemon"
version = "1.0.0"
edition = "2024"

[dependencies]
aetherlink-core.workspace = true
aetherlink-proto.workspace = true
anyhow.workspace = true
clap.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
